--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,5 @@ Header always set Access-Control-Allow-Origin "http://10.156.56.8, https://anosh
 Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, PUT, DELETE"
 Header always set Access-Control-Allow-Headers "X-Requested-With, Content-Type, Origin, Authorization"
 Header set Cross-Origin-Opener-Policy "same-origin; allow-popups"
+Header always edit Set-Cookie ^(.*)$ $1;SameSite=none
+
